--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "GoMarketplace",
   "version": "0.0.1",
   "private": true,
+  "author": {
+    "name": "Eduardo Ernesto Corrales Reyna",
+    "email": "ecorrales1979@gmail.com",
+    "url": "https://github.com/ecorrales1979"
+  },
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
